Fix some overflow styles in admin

--- a/styles/elements/_form-fields.scss
+++ b/styles/elements/_form-fields.scss
@@ -33,11 +33,6 @@ body.dnd-dragging {
 
         @include transition((opacity, box-shadow));
 
-        &.selected {
-          box-shadow: inset 0 0 0 4px $light-blue;
-          background-color: $lighter-blue;
-        }
-
         .row--item-contents--inner {
           display: flex;
           flex-direction: column;
@@ -73,10 +68,34 @@ body.dnd-dragging {
           }
 
           .item--preview {
+            position: relative;
             display: flex;
             align-items: center;
             width: 100%;
             height: 100%;
+
+            overflow: hidden;
+
+            &::after {
+              content: '';
+              display: block;
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: 12px;
+              height: 100%;
+
+              background: linear-gradient(
+                to left,
+                darken(white, 3%) 0%,
+                transparent 100%
+              );
+
+              @include transition((background));
+
+              z-index: 900;
+              pointer-events: none;
+            }
 
             select,
             textarea {
@@ -89,6 +108,10 @@ body.dnd-dragging {
                 &[type='#{$type}'] {
                   width: 100%;
                 }
+              }
+
+              &[type='range'] {
+                margin-right: 12px;
               }
             }
 
@@ -210,6 +233,23 @@ body.dnd-dragging {
                 input[type='radio'] {
                   transform: none;
                 }
+              }
+            }
+          }
+        }
+
+        &.selected {
+          box-shadow: inset 0 0 0 4px $light-blue;
+          background-color: $lighter-blue;
+
+          .row--item-contents--inner {
+            .item--preview {
+              &::after {
+                background: linear-gradient(
+                  to left,
+                  $lighter-blue 0%,
+                  transparent 100%
+                );
               }
             }
           }
